--- a/home.css
+++ b/home.css
@@ -76,7 +76,7 @@
       font-family: P-Light;
       height: 100vh;
       width: 100vw;
-      background-image: linear-gradient(rgba(4, 9, 10, 0.5), rgba(4, 9, 10, 0.5)) , url("../images/homepage-old2.png");
+      background-image: linear-gradient(rgba(4, 9, 10, 0.5), rgba(4, 9, 10, 0.5)) , url("homepage-old2.png");
       background-attachment: fixed;
       background-position: center;
       background-size: cover;
