--- a/home.css
+++ b/home.css
@@ -159,7 +159,7 @@
     }
     .header .text h1{
   
-      padding-bottom: 22px;
+/*       padding-bottom: 22px; */
       font-size: 28px;
     }
     .header .text h3{
@@ -366,7 +366,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 20px;
+/*     margin: 20px; */
   }
   .logbtn{
     width: 7.86667rem;
