--- a/home.css
+++ b/home.css
@@ -74,9 +74,9 @@
   }
   .header{
       font-family: P-Light;
-      height: 100vh;
+      height: 100%;
       width: 100vw;
-      background-image: linear-gradient(rgba(4, 9, 10, 0.5), rgba(4, 9, 10, 0.5)) , url("homepage-old2.png");
+      background-image: linear-gradient(rgba(4, 9, 10, 0.5), rgba(4, 9, 10, 0.5)) , url("../images/homepage-old2.png");
       background-attachment: fixed;
       background-position: center;
       background-size: cover;
@@ -159,9 +159,8 @@
     }
     .header .text h1{
   
-/*       padding-bottom: 22px; */
+      /* padding-bottom: 22px; */
       font-size: 28px;
-        margin-top: 40px;
     }
     .header .text h3{
       font-weight: 900;
@@ -367,19 +366,17 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: 40px;
+    margin: 20px;
   }
   .logbtn{
-    width: 9.86667rem;
+    width: 7.86667rem;
     height: 2.66667rem;
-    border-radius: ;
-    
+    border-radius: .13333rem;
     text-align: center;
-    background-color: #3c54bb;
-    font-family: 'P-Light';
-    color: #fff;
     line-height: .64rem;
     font-family: Inter;
+    background-color: #005a9c;
+    color: #fff;;
     font-size: 1.29333rem;
     font-weight: 400;
     margin: 10px;
